--- a/stylus/components/nav.styl
+++ b/stylus/components/nav.styl
@@ -22,6 +22,7 @@
     @extends .list-no-style
   a
     text-decoration none
+    color #b4bac2
   li
     font-size 16px
     padding 15px 10px
@@ -31,6 +32,7 @@
       color #ffffff
   .is-active
     background #41494f
+    color #ffffff
     &:hover
       background #41494f
   i
@@ -41,3 +43,4 @@
 .nav-signout
   position absolute
   bottom 0px
+  width 170px
