--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,13 +66,13 @@ input:focus,textarea:focus{background-color:#233f56}
 .element input:-ms-input-placeholder,.timer input:-ms-input-placeholder,.project input:-ms-input-placeholder,.results input:-ms-input-placeholder{color:#6b7680}
 .aside-nav{width:170px;position:fixed;background:#363e45;color:#eeeff0;height:100%;z-index:9999;top:0;bottom:0;left:0}
 .header-logo{margin:0;font-size:25px;text-align:center;height:69px;padding-top:15px}
-.nav a{text-decoration:none}
+.nav a{text-decoration:none;color:#b4bac2}
 .nav li{font-size:16px;padding:15px 10px;-webkit-transition:background .3s;-moz-transition:background .3s;-o-transition:background .3s;-ms-transition:background .3s;transition:background .3s;}
 .nav li:hover{background:#41494f;color:#fff}
-.nav .is-active{background:#41494f;}
+.nav .is-active{background:#41494f;color:#fff;}
 .nav .is-active:hover{background:#41494f}
 .nav i{width:15px;text-align:center;margin-right:11px}
-.nav-signout{position:absolute;bottom:0}
+.nav-signout{position:absolute;bottom:0;width:170px}
 .content-wrapper{margin:93px 0 0 170px;}
 .content-wrapper.nav-open{margin-top:170px}
 .header-timer{background:#363e45;-webkit-box-shadow:0 10px rgba(54,62,69,0.1);box-shadow:0 10px rgba(54,62,69,0.1);position:fixed;top:0;left:0;right:0;z-index:999;padding-left:170px;}
