--- a/stylus/components/project.styl
+++ b/stylus/components/project.styl
@@ -3,7 +3,7 @@
   legend
     color: #454545;
     font-size: 16px;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     font-weight: 800;
     padding-top: 15px;
     float: left;
