Date picker styling

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -188,4 +188,4 @@ ul.pagination .active a{background:#41494f;color:#fff}
 .dropdown-menu{background:#7e9bb8;border:0;-webkit-box-shadow:0;box-shadow:0;}
 .dropdown-menu thead{text-align:center}
 .dropdown-menu button{padding:4px;-webkit-border-radius:0;border-radius:0}
-.dropdown-menu .text-muted{color:#7e9bb8}
+.dropdown-menu .text-muted{color:#6f89a3}
