--- a/stylus/components/datepicker.styl
+++ b/stylus/components/datepicker.styl
@@ -8,7 +8,7 @@
     padding 4px
     border-radius 0px
   .text-muted
-    color $colorBlue
+    color #6F89A3
     // background $colorBlue
     // &:hover
     //   color $colorBlue
