--- a/stylus/components/header-timer.styl
+++ b/stylus/components/header-timer.styl
@@ -77,13 +77,13 @@
   clearfix()
 
 .timer__basic__title
-  width 340px
-  margin-right 20px
+  width 350px
+  margin-right 10px
   float left
 
 .timer__basic__project
-  width 340px
-  margin-right 20px
+  width 350px
+  margin-right 10px
   float left
 
 .timer__basic__btn
@@ -106,9 +106,9 @@
       background #41494f
 
 .timer__advanced__tags
-  width 520px
+  width 710px
   float left
-  margin-right 20px
+  margin-right 10px
   background #41494f
   border-radius 3px
   input
@@ -126,11 +126,24 @@
 .timer__advanced__time
   width 160px
   float left
-  margin-right 20px
+  margin-right 0px
+  padding-left 30px
+  border-radius 3px
+  background #41494f
 
-.timer__advanced__date
-  width 160px
-  float left
+  .time-widget__title
+    font-size 18px
+    color #ffffff
+
+  .time-widget__value
+    width 28px
+    padding 0px
+    text-align right
+    margin 0 5px 0 0
+
+// .timer__advanced__date
+//   width 160px
+//   float left
 
 .form-group
   position relative
