--- a/views/app.jade
+++ b/views/app.jade
@@ -141,6 +141,7 @@ html(ng-app="myApp")
     script(src='js/controllers/nav.js')
     script(src='js/directives/timer-widget.js')
     script(src='js/directives/timer.js')
+    script(src='js/directives/time.js')
     script(src='js/directives/project.js')
     script(src='js/filters.js')
     script(src='js/directives.js')
