--- a/views/partials/timer-widget.jade
+++ b/views/partials/timer-widget.jade
@@ -14,7 +14,7 @@
         a(ng-click="stopTimer(currentTimer)").btn.btn-warning Stop Timer
 
 form(name="timerForm", novalidate, ng-if="!currentTimer", ng-class="{'timer-focus': navOpen}")
-  pre {{timer | json}}
+  //- pre {{timer | json}}
   .timer__basic
     .container
       .form-group.timer__basic__title
@@ -26,15 +26,16 @@ form(name="timerForm", novalidate, ng-if="!currentTimer", ng-class="{'timer-focu
         input(ng-if="projects.length !== 0", type="text", id="project", placeholder="Select project", ng-model="timer.project", typeahead="project._id as project.title for project in projects | filter: $viewValue", typeahead-input-formatter="formatLabel($model)").form-control
         a(ng-if="projects.length === 0", ng-click="createProject()").btn.btn-default Create a project to assign timer to
       .form-group.timer__basic__btn
-        a(ng-click="startTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="!timer.time && todaysDate()").btn.btn-primary Start Timer
-        a(ng-click="addTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="timer.time || !todaysDate()").btn.btn-primary Add Time
+        a(ng-click="startTimer(timer)", ng-disabled="timerForm.$invalid").btn.btn-primary Start Timer
+        //- a(ng-click="startTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="!timer.time && todaysDate()").btn.btn-primary Start Timer
+        //- a(ng-click="addTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="timer.time || !todaysDate()").btn.btn-primary Add Time
   .timer__advanced
     .container
       .form-group.timer__advanced__tags
         label.sr-only Tags
         tags(data-options="{addable: true}", data-src="tag as tag for tag in tags", data-model="timer.tags")
       .form-group.form-icon.timer__advanced__time
-        time(model="timer.time")
+        time(model="timer.before")
   .timer__error
     h3(ng-if="errors", ng-bind="errors")
     //- .form-group.form-icon.timer__advanced__date
