--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,15 +46,15 @@ a.btn-warning,.btn-warning{background-color:#be3636;color:#fff;}
 a.btn-warning:hover,.btn-warning:hover{background-color:#852626}
 .input-clear,input,textarea{outline:0;border:0;background:transparent}
 .list-no-style,.nav ul,ul.pagination{list-style-type:none;margin:0;padding:0}
-input,textarea{font-family:"proxima-nova-soft",sans-serif;padding:15px;font-size:16px;margin-right:10px;-webkit-border-radius:4px;border-radius:4px;-webkit-transition:background-color 1s;-moz-transition:background-color 1s;-o-transition:background-color 1s;-ms-transition:background-color 1s;transition:background-color 1s;color:#fff;}
-input:focus,textarea:focus{background-color:#233f56}
+input,textarea{font-family:"proxima-nova-soft",sans-serif;padding:15px;font-size:16px;margin-right:10px;-webkit-border-radius:4px;border-radius:4px;-webkit-transition:background-color 1s;-moz-transition:background-color 1s;-o-transition:background-color 1s;-ms-transition:background-color 1s;transition:background-color 1s;color:#363e45;background-color:#fff;border:3px solid #eeeff0;-webkit-transition:all .3s;-moz-transition:all .3s;-o-transition:all .3s;-ms-transition:all .3s;transition:all .3s;}
+input:focus,textarea:focus{border-color:#7e9bb8}
 .form-icon{position:relative;}
 .form-icon input{padding-left:40px}
 .form-icon i{position:absolute;left:12px;top:15px;color:#fff;font-size:22px}
-::-webkit-input-placeholder{color:#fff}
-:-moz-placeholder{color:#fff}
-::-moz-placeholder{color:#fff}
-:-ms-input-placeholder{color:#fff}
+::-webkit-input-placeholder{color:#b4bac2}
+:-moz-placeholder{color:#b4bac2}
+::-moz-placeholder{color:#b4bac2}
+:-ms-input-placeholder{color:#b4bac2}
 .element,.timer,.project,.results{background:#fff;zoom:1;margin-bottom:10px;-webkit-border-radius:4px;border-radius:4px;display:block;padding:15px;}
 .element:before,.timer:before,.project:before,.results:before,.element:after,.timer:after,.project:after,.results:after{content:"";display:table}
 .element:after,.timer:after,.project:after,.results:after{clear:both}
