--- a/stylus/foundation/forms.styl
+++ b/stylus/foundation/forms.styl
@@ -17,9 +17,13 @@ textarea
   margin-right 10px
   border-radius 4px
   transition background-color 1s
-  color #ffffff
+  color #363e45
+  background-color #ffffff
+  border 3px solid #eeeff0
+  transition all .3s
   &:focus
-    background-color #233f56
+    // background-color #233f56
+    border-color $colorBlue
 
 .form-icon
   position relative
@@ -33,10 +37,10 @@ textarea
     font-size 22px
 
 ::-webkit-input-placeholder
-  color #ffffff
+  color #b4bac2
 :-moz-placeholder
-  color #ffffff
+  color #b4bac2
 ::-moz-placeholder
-  color #ffffff
+  color #b4bac2
 :-ms-input-placeholder
-  color #ffffff
+  color #b4bac2
