--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,12 +21,12 @@ html.landing
   //- link(rel="apple-touch-icon-precomposed", sizes="144x144", href="/imgs/apple-touch-icon-144x144-precomposed.png")
 
   link(rel="stylesheet", href='/css/font-awesome.min.css')
-  link(rel="stylesheet", href='/css/home.css')
+  link(rel="stylesheet", href='/css/index.css')
 
   script(src="/js/vendor/modernizr.js")
 
-  script(type="text/javascript", src="//use.typekit.net/crh6ubw.js")
-  script.
+  script(type="text/javascript", src="//use.typekit.net/ocs1xrk.js")
+  script(type="text/javascript").
     try{Typekit.load();}catch(e){}
 
   body
@@ -34,17 +34,3 @@ html.landing
 
   block scripts
     script(src="/js/vendor/jquery-2.0.3.js")
-    script.
-      (function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
-      typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
-      b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
-      mixpanel.init("#{mixpanel}")
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-40695334-1')
-    script.
-      window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
-      d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
-      _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
-      $.src='//v2.zopim.com/?1YGLKUggBh70rSD29AzXGKsl07P6ivmB';z.t=+new Date;$.
-      type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
