--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -72,6 +72,8 @@ body
     font-size 15px
     color #eeeff0
     margin 0
+  img
+    margin-bottom 20px
   .btn
     background #71c78b
     font-size 22px
