--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,7 +76,7 @@ input:focus,textarea:focus{border-color:#7e9bb8}
 .content-wrapper{margin:93px 0 0 170px;}
 .content-wrapper.nav-open{margin-top:170px}
 .header-timer{background:#363e45;-webkit-box-shadow:0 10px rgba(54,62,69,0.1);box-shadow:0 10px rgba(54,62,69,0.1);position:fixed;top:0;left:0;right:0;z-index:999;padding-left:170px;}
-.header-timer input{background:#535a5f;width:100%;height:51px;}
+.header-timer input{background:#535a5f;width:100%;height:51px;border:0;color:#fff;}
 .header-timer input:focus{background:#626b71}
 .header-timer pre{color:#fff}
 .timer__current__basic{-webkit-animation:fadeIn .5s;-moz-animation:fadeIn .5s;-o-animation:fadeIn .5s;-ms-animation:fadeIn .5s;animation:fadeIn .5s;padding:9px 0 7px 0}
