--- a/stylus/components/header-timer.styl
+++ b/stylus/components/header-timer.styl
@@ -16,6 +16,8 @@
     background #535a5f
     width 100%
     height 51px
+    border 0px
+    color #ffffff
     &:focus
       background lighten(#535a5f, 10%)
   pre
