--- a/views/auth/login.jade
+++ b/views/auth/login.jade
@@ -19,12 +19,12 @@ block content
 
       input(type="submit", value="Login").btn.btn--primary-su
 
-    a(href="/signup").form__small
-      | Don't have an account? 
-      b Sign up
+    //- a(href="/signup").form__small
+    //-   | Don't have an account? 
+    //-   b Sign up
 
-    a(href="/forgot").form__small
-      | Forgotten password?
+    //- a(href="/forgot").form__small
+    //-   | Forgotten password?
 
     //- b.title-center or
 
