--- a/views/index.jade
+++ b/views/index.jade
@@ -20,12 +20,15 @@ block content
     .content
       .clearfix
         .landing__features__feature
+          img(src="/img/landing/feature__estimate.png")
           h3 Super Fast
           p Tallies is built from the ground up to run fast and in real time for your whole team to instantly see who working on what.
         .landing__features__feature
+          img(src="/img/landing/feature__fast.png")
           h3 Project based organisation
           p Never forget what a timer was for. We’ve design our app to be based around projects and tasks.
         .landing__features__feature.no-margin-right
+          img(src="/img/landing/feature__team.png")
           h3 Task Estimates
           p Give estimates to tasks to keep control of your time. You can also sign up for email notifications for whenr team goes over.
       a.btn View Plans and Pricing
