--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
     .content
       h1 Simple to use Time Tracking for your team
       h2 Real time web interface with some extra content that sounds gooood.
-      a.btn View Plans and Pricing
+      a(href="/pricing").btn View Plans and Pricing
 
       img(src="/img/landing/screenshot.png").landing__screenshot
 
@@ -31,4 +31,4 @@ block content
           img(src="/img/landing/feature__team.png")
           h3 Task Estimates
           p Give estimates to tasks to keep control of your time. You can also sign up for email notifications for whenr team goes over.
-      a.btn View Plans and Pricing
+      a(href="/pricing").btn View Plans and Pricing
