--- a/views/landing/pricing.jade
+++ b/views/landing/pricing.jade
@@ -14,23 +14,9 @@ block content
       h2 Try any plan for 2 months for free.
 
       .landing__pricing__packages
-        .landing__pricing__package
-          h3 Free
-          h4
-            | $0
-            small /month
-          p
-            strong 2 
-            | projects
-          p
-            strong 15 
-            | tasks per project
-          p
-            strong 1 
-            | member
 
-        .landing__pricing__package
-          h3 Freelancer
+        a(href="/mailing-list").landing__pricing__package
+          h3 Going solo?
           h4
             | $5
             small /month
@@ -44,10 +30,25 @@ block content
             strong 1 
             | member
 
-        .landing__pricing__package
-          h3 Free
+        a(href="/mailing-list").landing__pricing__package
+          h3 Small Team
           h4
-            | $0
+            | $10
+            small /month
+          p
+            strong Unlimited 
+            | projects
+          p
+            strong Unlimited 
+            | tasks per project
+          p
+            strong 5 
+            | member
+
+        a(href="/mailing-list").landing__pricing__package.no-margin-right
+          h3 Large Team
+          h4
+            | $15
             small /month
           p
             strong Unlimited 
