--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block content
       a(href="/").landing__logo
         img(src="/img/landing/logo.png")
 
-    .content
+    .content.landing__content
       h1 Simple to use Time Tracking for your team
       h2 Real time web interface with some extra content that sounds gooood.
       a(href="/pricing").btn View Plans and Pricing
