--- a/public/css/main.css
+++ b/public/css/main.css
@@ -84,7 +84,7 @@ input:focus,textarea:focus{border-color:#7e9bb8}
 .nav i{width:15px;text-align:center;margin-right:11px}
 .nav-signout{position:absolute;bottom:0;width:170px}
 .content-wrapper{margin:93px 0 0 170px;}
-.content-wrapper.nav-open{margin-top:170px}
+.content-wrapper.nav-open{margin-top:190px}
 .header-timer{background:#363e45;-webkit-box-shadow:0 10px rgba(54,62,69,0.1);box-shadow:0 10px rgba(54,62,69,0.1);position:fixed;top:0;left:0;right:0;z-index:999;padding-left:170px;}
 .header-timer input{background:#535a5f;width:100%;height:51px;border:0;color:#fff;}
 .header-timer input:focus{background:#626b71}
@@ -106,7 +106,7 @@ input:focus,textarea:focus{border-color:#7e9bb8}
 .timer__basic__project{width:350px;margin-right:10px;float:left}
 .timer__basic__btn{width:160px;float:left;}
 .timer__basic__btn .btn{width:100%}
-.timer__advanced{background:#2a3035;zoom:1;height:71px;padding:10px 0;}
+.timer__advanced{background:#2a3035;zoom:1;height:88px;padding:10px 0;}
 .timer__advanced:before,.timer__advanced:after{content:"";display:table}
 .timer__advanced:after{clear:both}
 .timer__advanced input{background:#41494f;}
@@ -121,9 +121,27 @@ input:focus,textarea:focus{border-color:#7e9bb8}
 .form-group{position:relative;}
 .form-group .dropdown-menu{position:absolute;top:0;right:0;width:323px;}
 .form-group .dropdown-menu button{padding:4px}
-.timer__advanced{height:0;padding:0;display:none;-webkit-transition:height .4s, padding .4s .1s;-moz-transition:height .4s, padding .4s .1s;-o-transition:height .4s, padding .4s .1s;-ms-transition:height .4s, padding .4s .1s;transition:height .4s,padding .4s .1s}
+.timer__fixed-trigger{color:#79838a;font-size:14px;font-weight:800;margin-top:4px;display:block;cursor:pointer;-webkit-transition:color .3s;-moz-transition:color .3s;-o-transition:color .3s;-ms-transition:color .3s;transition:color .3s;}
+.timer__fixed-trigger:hover{color:#fff}
+.timer__fixed{background:#2a3035;zoom:1;height:61px;padding:0 0 10px 0;}
+.timer__fixed:before,.timer__fixed:after{content:"";display:table}
+.timer__fixed:after{clear:both}
+.timer__fixed input{background:#41494f;}
+.timer__fixed input:focus{background:#41494f}
+.timer__fixed__date{width:350px;margin-right:10px;float:left}
+.timer__fixed__total{width:350px;float:left;margin-right:10px;padding-left:30px;-webkit-border-radius:3px;border-radius:3px;background:#41494f;}
+.timer__fixed__total .time-widget__title{font-size:18px;color:#fff}
+.timer__fixed__total .time-widget__value{width:28px;padding:0;text-align:right;margin:0 5px 0 0}
+.timer__fixed__btn{width:160px;float:left;}
+.timer__fixed__btn .btn{width:100%}
+.timer-focus.timer-fixed .timer__advanced{height:71px}
+.timer-focus.timer-fixed .timer__basic__btn .btn{background:#415953;color:#5e656a}
+.timer-focus.timer-fixed .timer__advanced__time{background:#2f353a;color:#55595d;}
+.timer-focus.timer-fixed .timer__advanced__time input{background:#2f353a;color:#55595d}
+.timer-focus.timer-fixed .timer__advanced__time strong,.timer-focus.timer-fixed .timer__advanced__time i{color:#55595d}
+.timer__advanced{height:0;padding:0;display:none}
 .timer__advanced__time,.timer__advanced__date,.timer__advanced__tags{-webkit-transition:opacity .4s .4s;-moz-transition:opacity .4s .4s;-o-transition:opacity .4s .4s;-ms-transition:opacity .4s .4s;transition:opacity .4s .4s;opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}
-.timer-focus .timer__advanced{height:71px;padding:10px 0;display:block}
+.timer-focus .timer__advanced{height:88px;padding:10px 0;display:block}
 .timer-focus .timer__advanced__time,.timer-focus .timer__advanced__date,.timer-focus .timer__advanced__tags{opacity:1;-ms-filter:none;filter:none}
 .timers{margin-top:40px}
 .no-timers{position:relative;overflow:hidden;padding:30px 0 40px 250px;}
