--- a/stylus/components/header-timer.styl
+++ b/stylus/components/header-timer.styl
@@ -1,7 +1,7 @@
 .content-wrapper
   margin 93px 0px 0px 170px
   &.nav-open
-    margin-top 170px
+    margin-top 190px
 
 .header-timer
   background #363e45
@@ -100,7 +100,8 @@
 .timer__advanced
   background $colorBlack
   clearfix()
-  height 71px
+  // height 71px
+  height 88px
   padding 10px 0px
   input
     background #41494f
@@ -157,6 +158,73 @@
     button
       padding 4px
 
+.timer__fixed-trigger
+  color #79838a
+  font-size 14px
+  font-weight 800
+  margin-top 4px
+  display block
+  cursor pointer
+  transition color .3s
+  &:hover
+    color #ffffff
+
+//==============================================================================
+//  Timer fixed | ^
+//==============================================================================
+.timer__fixed
+  background $colorBlack
+  clearfix()
+  height 61px
+  padding 0px 0px 10px 0px
+  input
+    background #41494f
+    &:focus
+      background #41494f
+
+.timer__fixed__date
+  width 350px
+  margin-right 10px
+  float left
+
+.timer__fixed__total
+  width 350px
+  float left
+  margin-right 10px
+  padding-left 30px
+  border-radius 3px
+  background #41494f
+  .time-widget__title
+    font-size 18px
+    color #ffffff
+  .time-widget__value
+    width 28px
+    padding 0px
+    text-align right
+    margin 0 5px 0 0
+
+.timer__fixed__btn
+  width 160px
+  float left
+  .btn
+    width 100%
+
+.timer-focus.timer-fixed
+  .timer__advanced
+    height 71px
+  .timer__basic__btn
+    .btn
+      background #415953
+      color #5e656a
+  .timer__advanced__time
+    background #2f353a
+    color #55595d
+    input
+      background #2f353a
+      color #55595d
+    strong
+    i
+      color #55595d
 //==============================================================================
 //   Timer opening animation | ^
 //==============================================================================
@@ -164,7 +232,7 @@
   height 0px
   padding 0px
   display none
-  transition height .4s, padding .4s .1s
+  // transition height .4s, padding .4s .1s
 
 .timer__advanced__time
 .timer__advanced__date
@@ -174,7 +242,7 @@
 
 .timer-focus
   .timer__advanced
-    height 71px
+    height 88px
     padding 10px 0px
     display block
   .timer__advanced__time
