--- a/views/partials/timer-widget.jade
+++ b/views/partials/timer-widget.jade
@@ -13,7 +13,7 @@
       .timer__current__action
         a(ng-click="stopTimer(currentTimer)").btn.btn-warning Stop Timer
 
-form(name="timerForm", novalidate, ng-submit="startTimer(timer)", ng-if="!currentTimer", ng-class="{'timer-focus': navOpen}")
+form(name="timerForm", novalidate, ng-submit="startTimer(timer)", ng-if="!currentTimer", ng-class="{'timer-focus': navOpen, 'timer-fixed': fixedTimer}")
   //- pre {{timer | json}}
   //- pre timerForm.$invalid: {{timerForm.$invalid}}
   //- pre timerForm.$valid: {{timerForm.$valid}}
@@ -35,11 +35,22 @@ form(name="timerForm", novalidate, ng-submit="startTimer(timer)", ng-if="!curren
         //- a(ng-click="addTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="timer.time || !todaysDate()").btn.btn-primary Add Time
   .timer__advanced
     .container
-      .form-group.timer__advanced__tags
-        label.sr-only Tags
-        tags(data-options="{addable: true}", data-src="tag as tag for tag in tags", data-model="timer.tags")
-      .form-group.form-icon.timer__advanced__time
-        time(model="timer.before")
+      .clearfix
+        .form-group.timer__advanced__tags
+          label.sr-only Tags
+          tags(data-options="{addable: true}", data-src="tag as tag for tag in tags", data-model="timer.tags")
+        .form-group.form-icon.timer__advanced__time
+          time(model="timer.before")
+      span.timer__fixed-trigger(ng-if="!fixedTimer", ng-click="triggerFixedTimer()") Want to add a fixed time instead?
+  .timer__fixed(ng-if="fixedTimer")
+    .container
+      .form-group.form-icon.timer__fixed__date
+        i.fa.fa-calendar-o
+        input(type="text", datepicker-popup="{{format}}", ng-model="timer.date", show-button-bar="false", show-weeks="false")
+      .form-group.form-icon.timer__fixed__total
+        time(model="timer.total")
+      .form-group.timer__fixed__btn
+        a(ng-click="addTimer(timer)", ng-disabled="timerForm.$invalid").btn.btn-primary Add Timer
   .timer__error
     h3(ng-if="errors", ng-bind="errors")
     //- .form-group.form-icon.timer__advanced__date
